deploy/dev/deploy_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: 192.168.0.133:8083/omicrondev/omicron-appiosformulas-web-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    app: web
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: web
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauthserver-deployment
  labels:
    app: oauthserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauthserver
  template:
    metadata:
      labels:
        app: oauthserver
    spec:
      containers:
        - name: oauthserver
          image: 192.168.0.133:8083/omicrondev/omicron-appiosformulas-oauthserver-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: oauthserver-svc
  labels:
    app: oauthserver
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8090
  selector:
    app: oauthserver
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogos-deployment
  labels:
    app: catalogos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogos
  template:
    metadata:
      labels:
        app: catalogos
    spec:
      containers:
        - name: catalogos
          image: 192.168.0.133:8083/omicrondev/omicron-appiosformulas-catalogos-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: catalogos-svc
  labels:
    app: catalogos
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: catalogos
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-deployment
  labels:
    app: usuarios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          image: 192.168.0.133:8083/omicrondev/omicron-appiosformulas-usuarios-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: usuarios-svc
  labels:
    app: usuarios
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: usuarios
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapadapter-deployment
  labels:
    app: sapadapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sapadapter
  template:
    metadata:
      labels:
        app: sapadapter
    spec:
      containers:
        - name: sapadapter
          image: 192.168.0.133:8083/omicrondev/omicron-appiosformulas-sapadapter-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /hc
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 300
            timeoutSeconds: 40
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: sapadapter-svc
  labels:
    app: sapadapter
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: sapadapter
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos-deployment
  labels:
    app: pedidos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedidos
  template:
    metadata:
      labels:
        app: pedidos
    spec:
      containers:
        - name: pedidos
          image: 192.168.0.133:8083/omicrondev/omicron-appiosformulas-pedidos-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: pedidos-svc
  labels:
    app: pedidos
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: pedidos
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouses-deployment
  labels:
    app: warehouses
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouses
  template:
    metadata:
      labels:
        app: warehouses
    spec:
      containers:
        - name: warehouses
          image: 192.168.0.133:8083/omicrondev/omicron-appiosformulas-warehouses-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: warehouses-svc
  labels:
    app: warehouses
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: warehouses
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-deployment
  labels:
    app: reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting
  template:
    metadata:
      labels:
        app: reporting
    spec:
      containers:
        - name: reporting
          image: 192.168.0.133:8083/omicrondev/omicron-appiosformulas-reporting-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: reporting-svc
  labels:
    app: reporting
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: reporting
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seqlog-deployment
  labels:
    app: seqlog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seqlog
  template:
    metadata:
      labels:
        app: seqlog
    spec:
      containers:
        - name: seqlog
          image: datalust/seq:latest
          ports:
            - containerPort: 80
              name: intra
            - containerPort: 5341
              name: extra
---
apiVersion: v1
kind: Service
metadata:
  name: seqlog-svc
  labels:
    app: seqlog
spec:
  type: LoadBalancer
  ports:
    - name: default
      port: 81
      targetPort: 80
      protocol: TCP
    - name: alt
      port: 5341
      targetPort: 5341
      protocol: TCP
  externalIPs:
    - 192.168.0.101
  selector:
    app: seqlog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisdata-deployment
  labels:
    app: redisdata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisdata
  template:
    metadata:
      labels:
        app: redisdata
    spec:
      containers:
        - name: redisdata
          image: redis:alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redisdata-svc
  labels:
    app: redisdata
spec:
  type: LoadBalancer
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  externalIPs:
    - 192.168.0.101
  selector:
    app: redisdata
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapservicelayeradapter-deployment
  labels:
    app: sapservicelayeradapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sapservicelayeradapter
  template:
    metadata:
      labels:
        app: sapservicelayeradapter
    spec:
      containers:
        - name: sapservicelayeradapter
          image: 192.168.0.133:8083/omicrondev/omicron-appiosformulas-sapservicelayeradapter-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: sapservicelayeradapter-svc
  labels:
    app: sapservicelayeradapter
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: sapservicelayeradapter
  type: ClusterIP
