deploy/dev/seqlog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seqlog-deployment
  labels:
    app: seqlog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seqlog
  template:
    metadata:
      labels:
        app: seqlog
    spec:
      containers:
        - name: seqlog
          image: datalust/seq:latest
          ports:
            - containerPort: 80
              name: intra
            - containerPort: 5341
              name: extra
          resources:
            limits:
              cpu: 530m
              memory: 500Mi
            requests:
              cpu: 5m
              memory: 250Mi
---
apiVersion: v1
kind: Service
metadata:
  name: seqlog-svc
  labels:
    app: seqlog
spec:
  type: ClusterIP
  ports:
    - name: default
      port: 81
      targetPort: 80
      protocol: TCP
    - name: alt
      port: 5341
      targetPort: 5341
      protocol: TCP
  selector:
    app: seqlog
